--- a/team.html
+++ b/team.html
@@ -1,3 +1,6 @@
 <html>
   <title>hi</title>
 </html>
+<li><a href='mailto:email1@example.com'>Name 1</a></li>
+<li><a href='mailto:email2@example.com'>Name 2</a></li>
+<li><a href='mailto:email3@example.com'>Name 3</a></li>
