Added footer to team webpage

--- a/team.html
+++ b/team.html
@@ -4,3 +4,4 @@
 <li><a href='mailto:email1@example.com'>Name 1</a></li>
 <li><a href='mailto:email2@example.com'>Name 2</a></li>
 <li><a href='mailto:email3@example.com'>Name 3</a></li>
+<footer>Team Project - 2024</footer>
